syntax = "proto3";
package smartRetail;

service AutonomousCheckout {
    rpc AddToCart(CartItem) returns (AddToCartResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
    rpc CalculateTotal(CalculateTotalRequest) returns (CalculateTotalResponse);
    rpc Purchase(PurchaseRequest) returns (PurchaseResponse);
}

message CartItem {
    int32 quantity = 1;
    float price = 2; 
    string product_name = 3;
}

message AddToCartResponse {
    bool success = 1;
}

message GetCartRequest {}

message GetCartResponse {
    repeated CartItem cart = 1;
}

message CalculateTotalRequest {}

message CalculateTotalResponse {
    float total = 1;
}

message CardDetails {
    string card_number = 1;
    string expiration_date = 2;
    string cvv = 3;
}

message PurchaseRequest {
    float total = 1;
    string session_id = 2;
    CardDetails card_details = 3;
}

message PurchaseResponse {
    bool success = 1;
    string message = 2;
}
